# mays-vlog

./: .env.example  .gitignore  README.md
.cadence/: PROJECT.md
.cadence/cycle-character-library/: DESIGN.html  DESIGN.md  PLAN.md  REQUIREMENT.html  REQUIREMENT.md  RUN-STATE.md
.cadence/cycle-frontend-redesign/: DESIGN.html  DESIGN.md  PLAN.md  REQUIREMENT.html  REQUIREMENT.md  RUN-STATE.md
.cadence/cycle-frontend-redesign/research/: runway-style-sidebar.md
.cadence/cycle-video-gen-mvp/: DESIGN.html  DESIGN.md  PLAN.md  REQUIREMENT.html  REQUIREMENT.md  RUN-STATE.md
.cadence/cycle-video-gen-mvp/research/: ucloud-modelverse-kling.md  ucloud-ufile-python.md
backend/: CORS.md  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: tasks.py
backend/app/services/: README.md  modelverse.py  orchestrator.py  ufile.py
backend/app/storage/: README.md  db.py
backend/tests/: __init__.py  test_orchestrator.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  index.css
frontend/src/api/: README.md  client.ts  hooks.ts
frontend/src/components/: HistoryDetail.module.css  HistoryDetail.tsx  HistoryDrawer.module.css  HistoryDrawer.tsx  ProgressPanel.module.css  ProgressPanel.tsx  PromptInput.module.css  PromptInput.tsx  README.md  SubmissionWorkspace.module.css  SubmissionWorkspace.tsx  VideoPlayer.module.css  VideoPlayer.tsx
frontend/src/hooks/: README.md  usePlayUrlPool.ts
frontend/src/pages/: CharactersPage.module.css  CharactersPage.tsx  (+6 more)
scripts/: dev.sh
(+29 files in other folders)
